TestSuite/PascalABCTests/errors/err0512_object_as_nullable.pas
//!Невозможно инстанцировать, так как тип object не является размерным
## var a: object?;